# nonlinear-control-system

./: .gitignore  .python-version  Makefile  README.md  pyproject.toml  setup.py
doc/report/: attitude_control.sty  report.tex
doc/report/tex/: results.tex  section_attitudes.tex  section_controllers.tex  section_kinematics.tex  symbols.tex
doc/report/tikz/: body_frame.tex  inertial_frame.tex  lvlh_frame.tex
nonlinear_control_system/: __main__.py  attitude.py  controller.py  dynamics.py  integrator.py  nonlinear_control_system.py  orbit.py  quantity.py  simulation.py  spacecraft.py  state_vector.py  system.py
nonlinear_control_system/angular_rates/: __init__.py  angular_velocity.py
nonlinear_control_system/attitude/: __init__.py  angular_velocity.py  attitude.py  dcm.py  eigenaxis.py  euler_angles.py  mrp.py  quaternion.py
notes/: omega_dot.txt  omega_dot_linearization.txt  theta_dot_dot_linearization.txt
